force-app/main/default/objects/Case_Category_Skill_Mapping__mdt.object
<CustomObject>
    <description>A setting to map the live chat case category to the skills required for routing</description>
    <fields>
        <fullName>Case_Category_Level_1__c</fullName>
        <label>Case Category Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Developer_Name__c</fullName>
        <label>Skill Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Category Skill Mapping</label>
    <pluralLabel>Case Category Skill Mappings</pluralLabel>
</CustomObject>